--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,6 @@ services:
     volumes:
       - .:/var/www/html/
       - ./certs:/etc/letsencrypt
-      # - ./certs-data:/data/letsencrypt
     env_file:
       - ./id.env
     depends_on:
@@ -22,8 +21,5 @@ services:
     user: root
     volumes:
     - ./certs:/etc/letsencrypt
-    # - ./certs-data:/data/letsencrypt
-    - ./letsencrypt-config:/etc/letsencrypt
-    - ./letsencrypt-work:/var/lib/letsencrypt
     - ./letsencrypt-logs:/var/log/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --config-dir /etc/letsencrypt --work-dir /var/lib/letsencrypt --logs-dir /var/log/letsencrypt; sleep 12h & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --config-dir /etc/letsencrypt --logs-dir /var/log/letsencrypt; sleep 12h & wait $${!}; done;'"
