redo certbot config.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   webserver:
     build:
@@ -15,11 +17,12 @@ services:
       - ./id.env
     depends_on:
       - certbot
+
   certbot:
     image: certbot/certbot
     container_name: certbot
     user: root
     volumes:
-    - ./certs:/etc/letsencrypt
-    - ./letsencrypt-logs:/var/log/letsencrypt
+      - ./certs:/etc/letsencrypt
+      - ./letsencrypt-logs:/var/log/letsencrypt
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --config-dir /etc/letsencrypt --logs-dir /var/log/letsencrypt; sleep 12h & wait $${!}; done;'"
