--- a/default.prod.conf
+++ b/default.prod.conf
@@ -1,39 +1,27 @@
 <VirtualHost *:80>
-    ServerName localhost
-    # Set the document root
+    ServerName yourdomain.com
     DocumentRoot "/var/www/html"
-  <Directory "/var/www/html">
-    # Allow overriding the default configuration via `.htaccess`
-    AllowOverride All
-  </Directory>
-
-# Allow access to the .well-known/acme-challenge/ directory
-  <Directory "/var/www/html/.well-known/acme-challenge/">
-      Options None
-      AllowOverride None
-      Require all granted
-  </Directory>
-
-  # Redirect all HTTP traffic to HTTPS
-  RewriteEngine on
-  RewriteCond %{SERVER_NAME} =nmcdev.shimmeringtrashpile.com
-  RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
-</VirtualHost>    
-
-<VirtualHost *:443>
-    ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html
-
-    SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/privkey.pem
-
-    <Directory /var/www/html>
-        Options Indexes FollowSymLinks
+    <Directory "/var/www/html">
         AllowOverride All
         Require all granted
     </Directory>
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    <Directory "/var/www/html/.well-known/acme-challenge/">
+        Options None
+        AllowOverride None
+        Require all granted
+    </Directory>
+
+    RewriteEngine on
+    RewriteCond %{SERVER_NAME} =nmcdev.shimmeringtrashpile.com
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/html
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/privkey.pem
+    Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
