--- a/default.prod.conf
+++ b/default.prod.conf
@@ -23,5 +23,13 @@
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/privkey.pem
-    Include /etc/letsencrypt/options-ssl-apache.conf
+    
+    # SSL/TLS settings
+    SSLProtocol all -SSLv2 -SSLv3
+    SSLHonorCipherOrder on
+    SSLCipherSuite ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256
+    SSLCompression off
+    SSLSessionTickets off
+    SSLUseStapling on
+    SSLStaplingCache "shmcb:logs/stapling-cache(150000)"
 </VirtualHost>
