--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,4 +23,4 @@ services:
     volumes:
       - ./certs:/etc/letsencrypt
       - ./letsencrypt-logs:/var/log/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --config-dir /etc/letsencrypt --logs-dir /var/log/letsencrypt; sleep 12h & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --force-renewal --config-dir /etc/letsencrypt --logs-dir /var/log/letsencrypt; sleep 12h & wait $${!}; done;'"
