bugfix apache conf

--- a/default.prod.conf
+++ b/default.prod.conf
@@ -1,3 +1,6 @@
+# Global SSL/TLS settings
+SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
+
 <VirtualHost *:80>
     ServerName yourdomain.com
     DocumentRoot "/var/www/html"
@@ -31,5 +34,4 @@
     SSLCompression off
     SSLSessionTickets off
     SSLUseStapling on
-    SSLStaplingCache "shmcb:logs/stapling-cache(150000)"
 </VirtualHost>
