--- a/default.prod.conf
+++ b/default.prod.conf
@@ -16,8 +16,12 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
     </Directory>
 
     RewriteEngine on
-    RewriteCond %{SERVER_NAME} =nmcdev.shimmeringtrashpile.com
-    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+    RewriteCond %{HTTP_HOST} !=localhost
+    RewriteCond %{HTTP_HOST} ^www\. [NC,OR]
+    RewriteCond %{HTTPS} off
+    RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
+    RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
+
 </VirtualHost>
 
 <VirtualHost *:443>
