--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,9 @@ services:
       - "443:443"
     volumes:
       - .:/var/www/html/
+      - ./custom-php.prod.ini:/etc/php/8.3/apache2/conf.d/custom-php.ini
+      - ./php-logs:/var/log/php-logs
+      - ./apache-logs:/var/log/apache2
       - /etc/letsencrypt:/etc/letsencrypt
     env_file:
       - ./id.env
