--- a/custom-php.prod.ini
+++ b/custom-php.prod.ini
@@ -8,3 +8,6 @@ display_errors = On
 display_startup_errors = On
 log_errors = On
 error_log = /var/log/php-logs/php_errors.log
+
+; Increase PHP log level
+error_reporting = E_ALL
