Set Require All Granted on port 443

--- a/default.prod.conf
+++ b/default.prod.conf
@@ -38,4 +38,9 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
     SSLCompression off
     SSLSessionTickets off
     SSLUseStapling on
+
+    <Directory /var/www/html>
+        AllowOverride All
+        Require all granted
+    </Directory>
 </VirtualHost>
