--- a/site/blueprints/files/default.yml
+++ b/site/blueprints/files/default.yml
@@ -3,3 +3,10 @@ title: Image
 accept:
   mime: image/*
   type: image
+  minheight: 720 # accommodate 720p screenshots
+  minwidth: 720 # accommodate 720p screenshots
+  maxheight: 3840 # accommodate 4k screenshots
+  maxwidth: 3840 # accommodate 4k screenshots
+  maxsize: 5000000 # in bytes
+  create:
+    format: webp # the children are our future
