--- a/site/blueprints/pages/opportunity.yml
+++ b/site/blueprints/pages/opportunity.yml
@@ -1,31 +1,44 @@
 title: Opportunity
 
-fields:
-  category:
-    label: Category
-    type: select
-    required: true
-    options:
-      grant: Call for Grants
-      job: Call for Jobs
-      paper: Call for Papers
-      entry: Call for Entries
-      other: Other
-  short_description:
-    label: Short Description
-    type: textarea
-    required: true
-    minlength: 100
-    maxlength: 275
-  long_description:
-    label: Long Description
-    type: textarea
-    required: true
-    minlength: 100
-    maxlength: 6500
-  image:
+sections:
+  content:
+    type: fields
+    fields:
+      category:
+        label: Category
+        type: select
+        required: true
+        options:
+          grant: Call for Grants
+          job: Call for Jobs
+          paper: Call for Papers
+          entry: Call for Entries
+          other: Other
+      short_description:
+        label: Short Description
+        type: textarea
+        required: true
+        minlength: 100
+        maxlength: 275
+      long_description:
+        label: Long Description
+        type: textarea
+        required: true
+        minlength: 100
+        maxlength: 6500
+  files:
     label: Image
     type: files
     required: true
-    multiple: false
-
+    max: 1
+    empty: No image yet
+    help: Image replacements go live immediately. Remember to update the alt text too!
+  alt:  
+    type: fields
+    fields:
+      alt:
+        label: Image Alt Text
+        required: true
+        type: textarea
+        buttons: false
+        help: <b>"Alt Text"</b> helps screen-reading tools describe the image we are posting to our visually impaired readers. Check out some <a href="https://accessibility.huit.harvard.edu/describe-content-images" target="_blank">best practices</a> for writing them well.
