--- a/site/blueprints/pages/opportunity.yml
+++ b/site/blueprints/pages/opportunity.yml
@@ -14,6 +14,11 @@ sections:
           paper: Call for Papers
           entry: Call for Entries
           other: Other
+      date:
+        label: Created Date
+        type: date
+        default: today
+        required: true
       short_description:
         label: Short Description
         type: textarea
