description copy tweak.

--- a/site/blueprints/users/editor.yml
+++ b/site/blueprints/users/editor.yml
@@ -1,5 +1,5 @@
 title: Editor
-description: Editors can create, update and delete pages. They can also upload and replace files.
+description: Editors can create, update, and delete pages. They can also upload and replace files.
 
 
 permissions:
