Create editor and admin roles. Block editor role from modifying opportunties stub page.

--- a/site/blueprints/users/editor.yml
+++ b/site/blueprints/users/editor.yml
@@ -3,14 +3,13 @@ description: Editors can create, update, and delete pages. They can also upload 
 
 
 permissions:
-  panel:
-    access: true
+
   site:
     update: false
   pages:
     create: true
     update: true
-    delete: false
+    delete: true
   files:
     upload: true
     replace: true
