remove the file icon from textareas as that feature is an editorial footgun.

--- a/site/blueprints/pages/opportunity.yml
+++ b/site/blueprints/pages/opportunity.yml
@@ -24,12 +24,28 @@ sections:
         required: true
         minlength: 100
         maxlength: 275
+        buttons:
+          - bold
+          - italic
+          - link
+          - email
+          - code
+          - ul
+          - ol
       long_description:
         label: Long Description
         type: textarea
         required: true
         minlength: 100
         maxlength: 6500
+        buttons:
+          - bold
+          - italic
+          - link
+          - email
+          - code
+          - ul
+          - ol
       files:
         label: Image
         type: files
