disable change position feature for editors so the nav doesn't break.

--- a/site/blueprints/users/editor.yml
+++ b/site/blueprints/users/editor.yml
@@ -9,6 +9,8 @@ permissions:
     create: true
     update: true
     delete: true
+    sort: false # This is the "change position" permission
+
   files:
     upload: true
     replace: true
