--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -26,7 +26,12 @@ RUN apt-get update && apt-get install -y \
   php-mbstring \
   php-xml \
   php-zip && \
+  git \
+  git-lfs && \
   apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Initialize Git LFS
+RUN git lfs install
 
 # Enable SSL module and site configuration
 RUN a2enmod ssl
