--- a/Dockerfile.windows-dev
+++ b/Dockerfile.windows-dev
@@ -26,7 +26,12 @@ RUN apt-get update && apt-get install -y \
   php-mbstring \
   php-xml \
   php-zip && \
+  git \
+  git-lfs && \
   apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Initialize Git LFS
+RUN git lfs install
 
 # Copy virtual host configuration from current path onto existing 000-default.conf
 COPY default.dev.conf /etc/apache2/sites-available/000-default.conf
