--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -26,7 +26,7 @@ RUN apt-get update && apt-get install -y \
   php-mbstring \
   php-xml \
   php-zip && \
-  git \
+  git && \
   git-lfs && \
   apt-get clean && rm -rf /var/lib/apt/lists/*
 
