--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -27,7 +27,8 @@ RUN apt-get update && apt-get install -y \
   php-xml \
   php-zip \
   git \
-  git-lfs && \
+  git-lfs \
+  cron && \
   apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Initialize Git LFS
@@ -49,6 +50,18 @@ RUN a2enmod headers rewrite
 # Change web server's user id to match local user, replace with your local user id
 COPY entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["entrypoint.sh"]
+
+# Copy cron job file
+COPY cronjob.prod /etc/cron.d/git-push
+
+# Give execution rights on the cron job
+RUN chmod 0644 /etc/cron.d/git-push
+
+# Apply cron job
+RUN crontab /etc/cron.d/git-push
+
+# Create the log file to be able to run tail
+RUN touch /var/log/cron.log
 
 # Tell container to listen to port 80 at runtime
 EXPOSE 80 443
