--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,14 +1,23 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-    "indentation": 2,
-    "string-quotes": "double",
-    "color-hex-case": "lower",
     "color-hex-length": "short",
     "block-no-empty": true,
     "comment-whitespace-inside": "always",
-    "declaration-block-trailing-semicolon": "always",
-    "no-extra-semicolons": true,
-    "selector-list-comma-newline-after": "always"
+    "declaration-block-single-line-max-declarations": 1,
+    "rule-empty-line-before": [
+      "always",
+      {
+        "except": [
+          "first-nested"
+        ],
+        "ignore": [
+          "after-comment"
+        ]
+      }
+    ],
+    "selector-class-pattern": null,
+    "custom-property-pattern": null,
+    "at-rule-empty-line-before": "always"
   }
 }
