bugfix site.find

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -39,7 +39,7 @@ sections:
   galleries:
     label: Header/Footer Gallery
     type: pages
-    parent: site.find("header-footer")
+    parent: site.find("header-footer-galleries")
     layout: list 
     templates: gallery
     sortBy: date desc
