--- a/site/blueprints/pages/show.yml
+++ b/site/blueprints/pages/show.yml
@@ -16,8 +16,18 @@ sections:
         type: date
         default: today
         required: true
+      artist_name:
+        label: Artist Name(s)
+        type: textarea
+        required: true
+        minlength: 10
+        maxlength: 500
+        buttons:
+          - italic
+          - link
+        help: "Use the link button to link their name to their website."
       short_description:
-        label: Short Description
+        label: Short Artwork Description
         type: textarea
         required: true
         minlength: 100
@@ -31,7 +41,7 @@ sections:
           - ul
           - ol
       long_description:
-        label: Long Description
+        label: Long Artwork Description
         type: textarea
         required: true
         minlength: 100
@@ -45,14 +55,14 @@ sections:
           - ul
           - ol
       promo_image:
-        label: Square Promo Image
+        label: Promo Image
         type: files
         required: true
         max: 1
         empty: No image yet
         help: Image replacements on Public posts go live immediately. 💡Remember to update the alt text too!
       promo_image_alt:
-        label: Square Promo Image Alt Text
+        label: Promo Image Alt Text
         required: true
         type: textarea
         buttons: false
@@ -60,7 +70,7 @@ sections:
         minlength: 20
         maxlength: 400
       footer_image:
-        label: Wide Rectangular Footer Image
+        label: Footer Image
         type: files
         template: footer
         required: true
@@ -68,7 +78,7 @@ sections:
         empty: No image yet
         help: Goes in the site footer. Image replacements on Public posts go live immediately. 💡Remember to update the alt text too!
       footer_image_alt:
-        label: Wide Rectangular Footer Image Alt Text
+        label:  Footer Image Alt Text
         required: true
         type: textarea
         buttons: false
@@ -79,18 +89,3 @@ sections:
         label: Footer Image URL
         type: url
         help: "This will link the footer image. Remember http:// or https:// such as http://robray.net"
-      footer_image_caption:
-        label: Footer Image Caption
-        type: textarea
-        required: true
-        minlength: 10
-        maxlength: 275
-        buttons:
-          - bold
-          - italic
-          - link
-          - email
-          - code
-          - ul
-          - ol
-        help: "This text will appear under the footer image. Use it for crediting the artist, linking to their website, or providing more context."
