--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -11,6 +11,7 @@ sections:
       - blog
       - opportunities
       - about
+      - initiatives
         
   all:
     label: All Pages
@@ -18,15 +19,6 @@ sections:
     type: pages
     status: all
     layout: list
-
-  initiatives:
-    label: Our Initiatives
-    type: pages
-    parent: site.find("our-initiatives")
-    layout: list 
-    templates: initiative
-    sortBy: date desc
-    help: "Sorted newest at the top."
 
   header_footer_gallery:
     label: Header/Footer Gallery
