Added panel nesting to H/F gallery

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -12,6 +12,7 @@ sections:
       - opportunities
       - about
       - initiatives
+      - gallery
         
   all:
     label: All Pages
@@ -19,13 +20,4 @@ sections:
     type: pages
     status: all
     layout: list
-
-  header_footer_gallery:
-    label: Header/Footer Gallery
-    type: pages
-    parent: site.find("header-footer-gallery")
-    layout: list 
-    templates: show
-    sortBy: date desc
-    help: "Sorted newest at the top."
 
