Adding additional tags

--- a/site/blueprints/pages/blog_post.yml
+++ b/site/blueprints/pages/blog_post.yml
@@ -42,6 +42,12 @@ columns:
             type: tags
             help: "Click to see available tags" 
             options:
+              - Art
               - Design
-              - Architecture
               - VR
+              - AI
+              - Biohacking
+              - Wearables
+              - Embedded Computing
+              - Hardware
+              - Software
