--- a/site/blueprints/pages/opportunity.yml
+++ b/site/blueprints/pages/opportunity.yml
@@ -24,6 +24,7 @@ sections:
         required: true
         minlength: 100
         maxlength: 275
+        help: Must be 100-275 words long.
         buttons:
           - bold
           - italic
@@ -38,6 +39,7 @@ sections:
         required: true
         minlength: 100
         maxlength: 6500
+        help: Must be 100-6500 words long.
         buttons:
           - bold
           - italic
@@ -52,12 +54,13 @@ sections:
         required: true
         max: 1
         empty: No image yet
-        help: Image replacements on Public posts go live immediately. 💡Remember to update the alt text too!
+        help: Width must be between 960px and 3840px. Remember to update alt text when replacing image files. 
+
       alt:
         label: Image Alt Text
         required: true
         type: textarea
         buttons: false
-        help: <b>"Alt Text"</b> helps screen-reading tools describe the image we are posting to our visually impaired readers. Check out some <a href="https://accessibility.huit.harvard.edu/describe-content-images" target="_blank">best practices</a> for writing them well.
+        help: Must be 20-400 words long. Check out these <a href="https://accessibility.huit.harvard.edu/describe-content-images" target="_blank">best practices</a> for more info.
         minlength: 20
         maxlength: 400
