--- a/site/blueprints/pages/blog_post.yml
+++ b/site/blueprints/pages/blog_post.yml
@@ -38,6 +38,7 @@ columns:
           Image:
             type: files
             max: 1
+            help: One image per post, width between 960px and 3840px.
           tags:
             type: tags
             help: "Click to see available tags" 
