Create home welcome text block. Create home first three news-tagged blog posts. Create home first three opps

--- a/site/blueprints/pages/blog_post.yml
+++ b/site/blueprints/pages/blog_post.yml
@@ -43,13 +43,14 @@ columns:
             type: tags
             help: "Click to see available tags" 
             options:
-              - Art
-              - Design
-              - VR
               - AI
+              - Art
               - Biohacking
-              - Wearables
+              - Design
               - Embedded Computing
+              - Events
               - Hardware
-              - Software
               - News
+              - Software
+              - VR
+              - Wearables
