Trying to default the logged-in user as blog author.

--- a/site/blueprints/pages/blog_post.yml
+++ b/site/blueprints/pages/blog_post.yml
@@ -35,6 +35,7 @@ columns:
           author:
             type: users
             required: true
+            default: true
           Image:
             type: files
             max: 1
